--- a/app/src/main/res/layout/activity_detail_task_edit.xml
+++ b/app/src/main/res/layout/activity_detail_task_edit.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.retvence.rscoop.DashBoardIgniter.DetailTaskEditActivity">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/add_tasks_back_btn_Edit"
@@ -39,6 +43,7 @@
         android:layout_alignParentTop="true">
 
         <TextView
+            android:id="@+id/updateSave"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/sky_blue"
@@ -515,5 +520,6 @@
 
     </androidx.cardview.widget.CardView>
 
+    </RelativeLayout>
 
-</RelativeLayout>
+</ScrollView>
