--- a/app/src/main/res/layout/recentcard.xml
+++ b/app/src/main/res/layout/recentcard.xml
@@ -62,7 +62,7 @@
 
         <TextView
             android:id="@+id/Company_Name"
-            android:layout_width="wrap_content"
+            android:layout_width="330dp"
             android:layout_height="wrap_content"
             android:text="Sahpura Group"
             android:textSize="16sp"
