--- a/app/src/main/res/layout/add_task_layout.xml
+++ b/app/src/main/res/layout/add_task_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="160dp"
-    android:layout_height="250dp"
+    android:layout_height="255dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="12dp"
     app:cardElevation="5dp"
@@ -29,6 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/app_name"
+            android:textSize="16dp"
             android:textColor="@color/black"
             android:fontFamily="@font/avenir"
             android:layout_below="@+id/hotel_add_task_img"
