--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Authentication.LoginActivity">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/left_arrow"
@@ -92,6 +100,7 @@
         android:layout_height="wrap_content"
         android:text="@string/forgot_your_password"
         android:textSize="17sp"
+        android:visibility="gone"
         android:fontFamily="@font/avenir"
         android:textColor="#FF2D55"
         app:layout_constraintRight_toRightOf="parent"
@@ -104,7 +113,7 @@
         android:layout_height="44dp"
         app:cardBackgroundColor="#FF2D55"
         app:cardCornerRadius="8dp"
-        android:layout_marginTop="54dp"
+        android:layout_marginTop="64dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -147,10 +156,15 @@
         android:layout_height="wrap_content"
         android:text="@string/don_t_have_an"
         android:textSize="15sp"
+        android:visibility="gone"
         app:layout_constraintVertical_bias=".8"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_btn"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
+</RelativeLayout>
