--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -117,6 +117,7 @@
         android:layout_height="wrap_content"
         android:text="@string/don_t_have_an"
         android:textSize="15sp"
+        android:visibility="gone"
         android:fontFamily="@font/avenir"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
