--- a/app/src/main/res/layout/activity_add_new_task.xml
+++ b/app/src/main/res/layout/activity_add_new_task.xml
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add New Task"
-        android:textSize="24sp"
+        android:textSize="24dp"
         android:textStyle="bold"
         android:fontFamily="@font/avenir"
         android:textColor="@color/black"
@@ -48,7 +48,7 @@
             android:text="Save"
             android:paddingHorizontal="25dp"
             android:background="@color/sky_blue"
-            android:textSize="16sp"
+            android:textSize="15sp"
             android:fontFamily="@font/avenir"
             android:textColor="@color/white"/>
 
@@ -61,7 +61,7 @@
         android:text="Select Date"
         android:fontFamily="@font/avenir"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="20dp"
         android:layout_marginTop="18dp"
         android:layout_marginBottom="@dimen/margin_10"
         android:layout_marginStart="12dp"
@@ -111,7 +111,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Select Property"
-        android:textSize="20sp"
+        android:textSize="22dp"
         android:fontFamily="@font/avenir"
         android:textColor="@color/black"
         android:layout_marginTop="8dp"
@@ -201,7 +201,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Social Media Links"
-            android:textSize="20sp"
+            android:textSize="22dp"
             android:fontFamily="@font/avenir"
             android:textColor="@color/black"
             android:layout_marginTop="8dp"
@@ -245,7 +245,7 @@
                     android:layout_height="wrap_content"
                     style="@style/TextAppearance.AppCompat.Body1"
                     android:hint="@string/enter_number_of_post_and_videos"
-                    android:textSize="13sp"
+                    android:textSize="14dp"
                     android:layout_marginStart="60dp"
                     android:padding="5dp"
                     android:background="@drawable/round_low"
@@ -279,7 +279,7 @@
                     app:layout_constraintTop_toTopOf="@id/googl"
                     app:layout_constraintBottom_toBottomOf="@id/googl"
                     android:hint="@string/enter_number_of_reviews"
-                    android:textSize="13sp"
+                    android:textSize="14dp"
                     android:textColor="@color/add_details"
                     style="@style/TextAppearance.AppCompat.Body1"
                     android:fontFamily="@font/avenir"
@@ -304,7 +304,7 @@
                     android:padding="5dp"
                     android:layout_marginStart="60dp"
                     android:hint="Enter number of post and reels"
-                    android:textSize="13sp"
+                    android:textSize="14dp"
                     android:textColor="@color/add_details"
                     style="@style/TextAppearance.AppCompat.Body1"
                     android:fontFamily="@font/avenir"
@@ -337,7 +337,7 @@
                     app:layout_constraintTop_toTopOf="@id/linkedin"
                     app:layout_constraintBottom_toBottomOf="@id/linkedin"
                     android:hint="@string/enter_number_of_post_and_videos"
-                    android:textSize="13sp"
+                    android:textSize="14dp"
                     android:textColor="@color/add_details"
                     style="@style/TextAppearance.AppCompat.Body1"
                     android:fontFamily="@font/avenir"
@@ -366,7 +366,7 @@
                     app:layout_constraintTop_toTopOf="@id/pinterest"
                     app:layout_constraintBottom_toBottomOf="@id/pinterest"
                     android:hint="@string/enter_number_of_post_and_videos"
-                    android:textSize="13sp"
+                    android:textSize="14dp"
                     android:textColor="@color/add_details"
                     style="@style/TextAppearance.AppCompat.Body1"
                     android:fontFamily="@font/avenir"
@@ -395,7 +395,7 @@
                     app:layout_constraintTop_toTopOf="@id/tripad"
                     app:layout_constraintBottom_toBottomOf="@id/tripad"
                     android:hint="@string/enter_number_of_reviews"
-                    android:textSize="13sp"
+                    android:textSize="14dp"
                     android:textColor="@color/add_details"
                     style="@style/TextAppearance.AppCompat.Body1"
                     android:fontFamily="@font/avenir"
@@ -424,7 +424,7 @@
                     app:layout_constraintBottom_toBottomOf="@id/twit"
                     android:padding="5dp"
                     android:hint="@string/enter_number_of_post_and_videos"
-                    android:textSize="13sp"
+                    android:textSize="14dp"
                     android:textColor="@color/add_details"
                     style="@style/TextAppearance.AppCompat.Body1"
                     android:fontFamily="@font/avenir"
