--- a/app/src/main/res/layout/activity_detail_task.xml
+++ b/app/src/main/res/layout/activity_detail_task.xml
@@ -27,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Detail Task"
-        android:textSize="24sp"
+        android:textSize="24dp"
         android:textStyle="bold"
         android:fontFamily="@font/avenir"
         android:textColor="@color/black"
@@ -52,7 +52,7 @@
             android:paddingHorizontal="25dp"
             android:paddingVertical= "3dp"
             android:background="@color/sky_blue"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:fontFamily="@font/avenir"
             android:textColor="@color/white"/>
 
@@ -100,7 +100,7 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/card_pro"
             android:layout_width="160dp"
-            android:layout_height="250dp"
+            android:layout_height="255dp"
             app:cardCornerRadius="12dp"
             app:cardElevation="5dp"
             android:layout_marginStart="14dp"
@@ -129,6 +129,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/app_name"
+                    android:textSize="16dp"
                     android:textColor="@color/black"
                     android:fontFamily="@font/avenir"
                     android:layout_below="@+id/hotel_add_task_img"
@@ -172,7 +173,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Social Media Tasks"
-            android:textSize="20sp"
+            android:textSize="22dp"
             android:fontFamily="@font/avenir"
             android:textColor="@color/black"
             android:layout_marginTop="8dp"
@@ -214,7 +215,7 @@
                     android:layout_height="wrap_content"
                     style="@style/TextAppearance.AppCompat.Body1"
                     android:hint="@string/enter_number_of_post_and_videos"
-                    android:textSize="13sp"
+                    android:textSize="14dp"
                     android:layout_marginStart="60dp"
                     android:padding="5dp"
                     android:background="@drawable/round_low"
@@ -249,7 +250,7 @@
                         app:layout_constraintTop_toTopOf="@id/googl"
                         app:layout_constraintBottom_toBottomOf="@id/googl"
                         android:hint="@string/enter_number_of_reviews"
-                        android:textSize="13sp"
+                        android:textSize="14dp"
                         android:textColor="@color/add_details"
                         style="@style/TextAppearance.AppCompat.Body1"
                         android:fontFamily="@font/avenir"
@@ -273,7 +274,7 @@
                         android:padding="5dp"
                         android:layout_marginStart="60dp"
                         android:hint="Enter number of post and reels"
-                        android:textSize="13sp"
+                        android:textSize="14dp"
                         android:textColor="@color/add_details"
                         style="@style/TextAppearance.AppCompat.Body1"
                         android:fontFamily="@font/avenir"
@@ -305,7 +306,7 @@
                         app:layout_constraintTop_toTopOf="@id/linkedin"
                         app:layout_constraintBottom_toBottomOf="@id/linkedin"
                         android:hint="@string/enter_number_of_post_and_videos"
-                        android:textSize="13sp"
+                        android:textSize="14dp"
                         android:textColor="@color/add_details"
                         style="@style/TextAppearance.AppCompat.Body1"
                         android:fontFamily="@font/avenir"
@@ -333,7 +334,7 @@
                         app:layout_constraintTop_toTopOf="@id/pinterest"
                         app:layout_constraintBottom_toBottomOf="@id/pinterest"
                         android:hint="@string/enter_number_of_post_and_videos"
-                        android:textSize="13sp"
+                        android:textSize="14dp"
                         android:textColor="@color/add_details"
                         style="@style/TextAppearance.AppCompat.Body1"
                         android:fontFamily="@font/avenir"
@@ -361,7 +362,7 @@
                         app:layout_constraintTop_toTopOf="@id/tripad"
                         app:layout_constraintBottom_toBottomOf="@id/tripad"
                         android:hint="@string/enter_number_of_reviews"
-                        android:textSize="13sp"
+                        android:textSize="14dp"
                         android:textColor="@color/add_details"
                         style="@style/TextAppearance.AppCompat.Body1"
                         android:fontFamily="@font/avenir"
@@ -390,7 +391,7 @@
                         app:layout_constraintBottom_toBottomOf="@id/twit"
                         android:padding="5dp"
                         android:hint="@string/enter_number_of_post_and_videos"
-                        android:textSize="13sp"
+                        android:textSize="14dp"
                         android:textColor="@color/add_details"
                         style="@style/TextAppearance.AppCompat.Body1"
                         android:fontFamily="@font/avenir"
@@ -448,7 +449,7 @@
                 android:text="Pending"
                 android:background="#F74A4A"
                 android:layout_marginStart="5dp"
-                android:textSize="16sp"
+                android:textSize="17dp"
                 android:fontFamily="@font/avenir"
                 android:textColor="@color/white"/>
 
@@ -492,7 +493,7 @@
                 android:text="Done"
                 android:background="#4AC1F7"
                 android:layout_marginStart="5dp"
-                android:textSize="16sp"
+                android:textSize="17dp"
                 android:fontFamily="@font/avenir"
                 android:textColor="@color/white"/>
 
@@ -536,7 +537,7 @@
                 android:text="Edit"
                 android:background="#1EE3B3"
                 android:layout_marginStart="5dp"
-                android:textSize="16sp"
+                android:textSize="17dp"
                 android:fontFamily="@font/avenir"
                 android:textColor="@color/white"/>
 
