--- a/app/src/main/res/layout/activity_detail_task_edit.xml
+++ b/app/src/main/res/layout/activity_detail_task_edit.xml
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Detail Task"
-        android:textSize="24sp"
+        android:textSize="24dp"
         android:textStyle="bold"
         android:fontFamily="@font/avenir"
         android:textColor="@color/black"
@@ -51,7 +51,7 @@
             android:paddingHorizontal="25dp"
             android:text="Save"
             android:textColor="@color/white"
-            android:textSize="16sp" />
+            android:textSize="15sp" />
 
     </androidx.cardview.widget.CardView>
 
@@ -73,7 +73,7 @@
             android:paddingHorizontal="25dp"
             android:paddingVertical= "3dp"
             android:background="@color/sky_blue"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:fontFamily="@font/avenir"
             android:textColor="@color/white"/>
 
@@ -238,7 +238,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/_2_2"
                     style="@style/TextAppearance.AppCompat.Body1"
-                    android:textSize="13sp"
+                    android:textSize="14dp"
                     android:layout_marginStart="60dp"
                     android:padding="5dp"
                     android:background="@drawable/round_low"
@@ -273,7 +273,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@id/googl"
                     app:layout_constraintBottom_toBottomOf="@id/googl"
-                    android:textSize="13sp"
+                    android:textSize="14dp"
                     android:textColor="@color/add_details"
                     style="@style/TextAppearance.AppCompat.Body1"
                     android:fontFamily="@font/avenir"
@@ -297,7 +297,7 @@
                     android:background="@drawable/round_low"
                     android:padding="5dp"
                     android:layout_marginStart="60dp"
-                    android:textSize="13sp"
+                    android:textSize="14dp"
                     android:textColor="@color/add_details"
                     style="@style/TextAppearance.AppCompat.Body1"
                     android:fontFamily="@font/avenir"
@@ -331,7 +331,7 @@
                     app:layout_constraintTop_toTopOf="@id/linkedin"
                     app:layout_constraintBottom_toBottomOf="@id/linkedin"
                     android:hint="@string/_2_2"
-                    android:textSize="13sp"
+                    android:textSize="14dp"
                     android:textColor="@color/add_details"
                     style="@style/TextAppearance.AppCompat.Body1"
                     android:fontFamily="@font/avenir"
@@ -358,7 +358,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@id/pinterest"
                     app:layout_constraintBottom_toBottomOf="@id/pinterest"
-                    android:textSize="13sp"
+                    android:textSize="14dp"
                     android:textColor="@color/add_details"
                     style="@style/TextAppearance.AppCompat.Body1"
                     android:fontFamily="@font/avenir"
@@ -385,7 +385,7 @@
                     app:layout_constraintTop_toTopOf="@id/tripad"
                     app:layout_constraintBottom_toBottomOf="@id/tripad"
                     android:hint="45"
-                    android:textSize="13sp"
+                    android:textSize="14dp"
                     android:textColor="@color/add_details"
                     style="@style/TextAppearance.AppCompat.Body1"
                     android:fontFamily="@font/avenir"
@@ -411,7 +411,7 @@
                     app:layout_constraintTop_toTopOf="@id/twit"
                     app:layout_constraintBottom_toBottomOf="@id/twit"
                     android:padding="5dp"
-                    android:textSize="13sp"
+                    android:textSize="14dp"
                     android:textColor="@color/add_details"
                     style="@style/TextAppearance.AppCompat.Body1"
                     android:fontFamily="@font/avenir"
