--- a/app/src/main/res/layout/fragment_recent_tasks.xml
+++ b/app/src/main/res/layout/fragment_recent_tasks.xml
@@ -9,7 +9,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="380dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
