--- a/app/src/main/res/layout/recentcard.xml
+++ b/app/src/main/res/layout/recentcard.xml
@@ -7,15 +7,12 @@
     app:cardCornerRadius="20dp"
     android:layout_margin="5dp"
     android:background="#FFFFFF"
-    android:layout_alignParentStart="true"
-    >
+    android:layout_alignParentStart="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="10dp"
-        >
-
+        android:layout_marginBottom="10dp">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_marketing"
@@ -172,8 +169,8 @@
             android:id="@+id/facebooktask"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2 Post and 2 Videos"
-            android:textSize="14sp"
+            android:text="20 Post and 20 Videos"
+            android:textSize="16dp"
             android:fontFamily="@font/avenir"
             android:layout_marginStart="5dp"
             app:layout_constraintStart_toEndOf="@id/fb_icon"
@@ -185,7 +182,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2 Post and 2 Videos"
-            android:textSize="14sp"
+            android:textSize="16dp"
             android:fontFamily="@font/avenir"
             android:layout_marginStart="5dp"
             app:layout_constraintStart_toEndOf="@id/ig_icon"
@@ -198,7 +195,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2 Post and 2 Videos"
-            android:textSize="14sp"
+            android:textSize="16dp"
             android:fontFamily="@font/avenir"
             android:layout_marginStart="5dp"
             app:layout_constraintStart_toEndOf="@id/pinterest_icon"
@@ -211,7 +208,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2 Post and 2 Videos"
-            android:textSize="14sp"
+            android:textSize="16dp"
             android:fontFamily="@font/avenir"
             android:layout_marginStart="5dp"
             app:layout_constraintStart_toEndOf="@id/google_icon"
@@ -225,7 +222,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2 Post and 2 Videos"
-            android:textSize="14sp"
+            android:textSize="16dp"
             android:fontFamily="@font/avenir"
             android:layout_marginStart="5dp"
             app:layout_constraintStart_toEndOf="@id/linkdin_icon"
@@ -237,7 +234,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2 Post and 2 Videos"
-            android:textSize="14sp"
+            android:textSize="16dp"
             android:fontFamily="@font/avenir"
             android:layout_marginStart="5dp"
             app:layout_constraintStart_toEndOf="@id/twitter_icon"
@@ -250,7 +247,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="2 Post and 2 Videos"
-                android:textSize="14sp"
+                android:textSize="16dp"
                 android:fontFamily="@font/avenir"
                 android:layout_marginStart="5dp"
                 app:layout_constraintStart_toEndOf="@id/ullu"
