--- a/app/src/main/res/layout/activity_recent_properties_view.xml
+++ b/app/src/main/res/layout/activity_recent_properties_view.xml
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/recent_properties"
-        android:textSize="26sp"
+        android:textSize="26dp"
         android:textStyle="bold"
         android:fontFamily="@font/avenir"
         android:textColor="@color/black"
