--- a/app/src/main/res/layout/item_recent_properties.xml
+++ b/app/src/main/res/layout/item_recent_properties.xml
@@ -37,7 +37,7 @@
 
             <TextView
                 android:id="@+id/hotel_name"
-                android:layout_width="wrap_content"
+                android:layout_width="240dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
                 android:layout_toEndOf="@+id/hotel_profile"
@@ -47,8 +47,7 @@
                 android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@id/hotel_profile"
-                app:layout_constraintTop_toTopOf="@id/hotel_profile"
-                app:layout_constraintBottom_toBottomOf="@id/hotel_profile"/>
+                app:layout_constraintTop_toTopOf="@id/hotel_profile"/>
 
             <TextView
                 android:id="@+id/hotel_location"
