--- a/app/src/main/res/layout/clientcountryxml.xml
+++ b/app/src/main/res/layout/clientcountryxml.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="wrap_content"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
@@ -39,51 +39,41 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Name"
-            android:textFontWeight="600"
             android:textSize="20sp"
             android:fontFamily="@font/avenir"
             android:textStyle="normal"
             android:textColor="#092C4C"
             android:layout_marginStart="8dp"
-            app:layout_constraintVertical_bias="0.1"
-            app:layout_constraintTop_toTopOf="@id/clientImage"
-            app:layout_constraintStart_toEndOf="@id/clientImage"
-            app:layout_constraintBottom_toBottomOf="@id/clientImage"
-            />
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/clientImage"/>
 
         <TextView
             android:id="@+id/NumberOfClient"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="60dp"
             android:fontFamily="@font/avenir"
-            android:text="+91 7905845935"
+            android:text="7905845935"
             android:textColor="#95959D"
             android:textSize="15sp"
             android:textStyle="normal"
-            app:layout_constraintBottom_toBottomOf="@id/clientImage"
-            app:layout_constraintStart_toEndOf="@id/clientImage"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.384" />
+            app:layout_constraintStart_toStartOf="@id/clientName"
+            app:layout_constraintTop_toBottomOf="@id/clientName"/>
 
         <TextView
             android:id="@+id/addOfClient"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="80dp"
             android:fontFamily="@font/avenir"
             android:text="Mumbai,India"
             android:textColor="#95959D"
             android:textSize="15sp"
             android:textStyle="normal"
-            app:layout_constraintBottom_toBottomOf="@id/clientImage"
-            app:layout_constraintStart_toEndOf="@id/clientImage"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toBottomOf="@id/NumberOfClient"
+            app:layout_constraintStart_toStartOf="@id/NumberOfClient"/>
 
         <ImageView
+            android:id="@+id/call"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:src="@drawable/png_phone_call"
