--- a/app/src/main/res/layout/activity_add_client.xml
+++ b/app/src/main/res/layout/activity_add_client.xml
@@ -111,7 +111,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="Client Full Name"
-        android:textSize="16sp"
+        android:textSize="17dp"
         app:layout_constraintTop_toBottomOf="@id/client_profile"
         android:fontFamily="@font/avenir"
         app:layout_constraintStart_toStartOf="parent"
@@ -159,7 +159,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:hint="@string/enter_phone_number"
-                    android:textSize="17sp"
+                    android:textSize="18dp"
                     android:textColor="@color/add_details"
                     android:background="@null"
                     style="@style/TextAppearance.AppCompat.Body1"
@@ -194,7 +194,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:hint="@string/enter_email"
-                    android:textSize="17sp"
+                    android:textSize="18dp"
                     android:background="@null"
                     android:textColor="@color/add_details"
                     style="@style/TextAppearance.AppCompat.Body1"
@@ -229,7 +229,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:hint="@string/enter_default_password"
-                    android:textSize="17sp"
+                    android:textSize="18dp"
                     android:textColor="@color/add_details"
                     android:background="@null"
                     style="@style/TextAppearance.AppCompat.Body1"
@@ -265,7 +265,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:hint="@string/location"
-                    android:textSize="17sp"
+                    android:textSize="18dp"
                     android:textColor="@color/add_details"
                     android:background="@null"
                     style="@style/TextAppearance.AppCompat.Body1"
