--- a/app/src/main/res/layout/activity_add_new_task.xml
+++ b/app/src/main/res/layout/activity_add_new_task.xml
@@ -95,7 +95,7 @@
 
 
         <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewDate"
+        android:id="@+id/recyclerViewDateNewTask"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:listitem="@layout/date_layout"
@@ -116,7 +116,7 @@
         android:textColor="@color/black"
         android:layout_marginTop="8dp"
         android:layout_marginStart="12dp"
-        android:layout_below="@id/recyclerViewDate"/>
+        android:layout_below="@id/recyclerViewDateNewTask"/>
 
 
     <TextView
