--- a/app/src/main/res/layout/recentcard.xml
+++ b/app/src/main/res/layout/recentcard.xml
@@ -246,13 +246,24 @@
                 android:id="@+id/gg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="2 Post and 2 Videos"
+                android:text="500 review"
                 android:textSize="14dp"
                 android:fontFamily="@font/avenir"
                 android:layout_marginStart="5dp"
                 app:layout_constraintStart_toEndOf="@id/ullu"
                 app:layout_constraintTop_toTopOf="@+id/ullu"
                 app:layout_constraintBottom_toBottomOf="@id/ullu"/>
+
+        <ImageView
+            android:id="@+id/favorite_icon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/favorite"
+            android:visibility="gone"
+            app:layout_constraintHorizontal_bias="0.9"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
