--- a/app/src/main/res/menu/client_nav_bottom.xml
+++ b/app/src/main/res/menu/client_nav_bottom.xml
@@ -11,7 +11,7 @@
         android:title="To-Do" />
     <item
         android:id="@+id/favorite_client"
-        android:icon="@drawable/bookmark_icon"
+        android:icon="@drawable/favorite"
         android:title="Favorite" />
     <item
         android:id="@+id/profile_client"
