--- a/app/src/main/res/layout/fragment_client_todo.xml
+++ b/app/src/main/res/layout/fragment_client_todo.xml
@@ -1,9 +1,13 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.retvence.rscoop.DashBoardClient.ClientNavigation.ClientTodoFragment">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
 
     <TextView
@@ -21,6 +25,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
+    <dev.joshhalvorson.calendar_date_range_picker.calendar.CalendarPicker
+        android:id="@+id/calendarPicker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:dayTextColor="@color/black"
+        app:daysOfWeekTextColor="@color/black"
+        app:selectedDateCircleColor="@color/sky_blue"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/sdate"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_Tasks_todo_client"
         android:layout_width="match_parent"
@@ -29,7 +44,7 @@
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/sdate"/>
+        app:layout_constraintTop_toBottomOf="@id/calendarPicker"/>
 
     <com.facebook.shimmer.ShimmerFrameLayout
         android:id="@+id/shimmer_tasks_container_todo_c"
@@ -37,7 +52,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/sdate">
+        app:layout_constraintTop_toBottomOf="@id/calendarPicker">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -61,3 +76,4 @@
     </com.facebook.shimmer.ShimmerFrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
