--- a/app/src/main/res/layout/activity_igniter_dash_board.xml
+++ b/app/src/main/res/layout/activity_igniter_dash_board.xml
@@ -15,6 +15,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ImageView
+            android:id="@+id/logout_igniter"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/switch_off"
+            android:padding="6dp"
+            android:layout_margin="24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
     <TextView
         android:id="@+id/Month"
         android:layout_width="wrap_content"
