--- a/app/src/main/res/layout/fragment_client_profile.xml
+++ b/app/src/main/res/layout/fragment_client_profile.xml
@@ -11,26 +11,24 @@
 
     <TextView
         android:id="@+id/client_Hotel_Name_profile"
-        android:layout_width="300dp"
+        android:layout_width="285dp"
         android:layout_height="wrap_content"
         android:text="Hotel Name"
         android:textSize="25dp"
         android:textStyle="bold"
-        android:gravity="center_horizontal"
         android:fontFamily="@font/avenir"
         android:textColor="#383842"
-        android:layout_marginTop="20dp"
+        android:layout_margin="20dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <ImageView
         android:id="@+id/client_hotel_cover_profile"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="220dp"
         android:src="@drawable/png_hotel"
         android:layout_marginTop="15dp"
-        android:layout_marginHorizontal="20dp"
+        android:layout_marginHorizontal="15dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
         android:background="@drawable/imagecorner"
@@ -38,7 +36,40 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
-    <com.google.android.material.imageview.ShapeableImageView
+
+        <LinearLayout
+            android:id="@+id/logOut_client"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="LogOut"
+                android:textSize="14dp"
+                android:fontFamily="@font/avenir"
+                android:textStyle="bold"
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/black"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/logout_24"
+                android:layout_gravity="center_vertical"
+                android:layout_marginHorizontal="8dp"/>
+
+
+        </LinearLayout>
+
+
+        <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/client_hotel_profile"
         android:layout_width="80dp"
         android:layout_height="80dp"
