--- a/app/src/main/res/layout/activity_client_detail_task.xml
+++ b/app/src/main/res/layout/activity_client_detail_task.xml
@@ -147,7 +147,7 @@
                         android:layout_alignParentStart="true"/>
 
                     <TextView
-                        android:id="@+id/star_rate_number"
+                        android:id="@+id/star_rate_number_client"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="5"
