--- a/app/src/main/res/layout/fragment_client_todo.xml
+++ b/app/src/main/res/layout/fragment_client_todo.xml
@@ -36,7 +36,33 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/sdate"/>
 
-    <androidx.recyclerview.widget.RecyclerView
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/get_calendar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/sky_blue"
+            app:cardCornerRadius="16dp"
+            android:layout_margin="40dp"
+            app:layout_constraintBottom_toBottomOf="@id/calendarPicker"
+            app:layout_constraintEnd_toEndOf="@id/calendarPicker">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Get"
+                android:paddingHorizontal="25dp"
+                android:paddingVertical= "3dp"
+                android:background="@color/sky_blue"
+                android:textSize="14sp"
+                android:fontFamily="@font/avenir"
+                android:textColor="@color/white"/>
+
+        </androidx.cardview.widget.CardView>
+
+
+
+        <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_Tasks_todo_client"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
